--- a/WebTaskApp/src/main/webapp/index.xhtml
+++ b/WebTaskApp/src/main/webapp/index.xhtml
@@ -16,7 +16,8 @@
     <h:form>
         <p:inputText id = "text" />
 
-        <p:commandButton value="Submi"/>
+        <p:commandButton value="Submit"/>
+        <p:commandButton value="Submit"/>
 
     </h:form>
 
