--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -2,9 +2,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:s="http://jboss.org/schema/seam/taglib"
       xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
@@ -13,11 +14,19 @@
 <h:body>
     <h1>Hello</h1>
 
-    <h:form>
-        <p:inputText id = "text" />
-
-        <p:commandButton value="Submit"/>
-        <p:commandButton value="Submit"/>
+    <h:form id="loginForm">
+        <f:facet name = "header">Login</f:facet>
+        <div class = "dialog">
+            <h:panelGrid columns="2" rowClasses="prop" columnClasses="name,value">
+                <h:outputLabel value="Username" for="username"/>
+                <h:inputText id = "username" value="#{loginBean.username}" />
+                <h:outputLabel value="Password" for ="password"/>
+                <h:inputText id ="password" value="#{loginBean.password}" required="true" label="password"> </h:inputText>
+            </h:panelGrid>
+        </div>
+        <div class ="actionButtons">
+            <h:commandButton id = "submit" value="Login" action="#{loginBean.login}" oncomplete="handleLoginRequest(xhr, status, args)"/>
+        </div>
 
     </h:form>
 
