--- a/src/main/webapp/task.xhtml
+++ b/src/main/webapp/task.xhtml
@@ -2,7 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:s="http://jboss.org/schema/seam/taglib"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"
@@ -16,33 +15,33 @@
 
     <h:form id="loginForm">
         <f:facet name = "header">Task</f:facet>
-        <div class = "dialog">
+
+        <div class = "user" align="right">
             <p:panelGrid columns="2" rowClasses="prop" columnClasses="name,value">
                 <p:outputLabel id="displayResponse" value="Username: #{login.username}"/>
             </p:panelGrid>
         </div>
-        <p:growl id="msg" />
+
 
         <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
 
-
-            <p:inputText id ="name" /> <p:commandButton value="Нажать"  />
-            <h:outputText value="Ajax Behavior: " />
-            <p:selectBooleanCheckbox value="#{login.value2}">
-                <p:ajax update="msg" listener="#{login.addMessage}"/>
-            </p:selectBooleanCheckbox>
+            <p:inputText id ="name" value="#{login.name}" />
+            <p:commandButton value="Submit" update=":loginForm:tasks"  action="#{login.addTask()}"/>
 
         </h:panelGrid>
 
-        <p:commandButton value="Submit" update="display" oncomplete="PF('dlg').show()" />
 
-        <p:dialog header="Selected Values" modal="true" showEffect="fade" hideEffect="fade" widgetVar="dlg">
-            <h:panelGrid columns="1" id="display">
-               <h:outputText value="Value 2: #{login.value2}" />
-            </h:panelGrid>
-        </p:dialog>
-
-
+       <div class = "task" align="center">
+        <p:dataTable id = "tasks" var="task" value="#{login.taskList}"  style="align-content:center; width:40%">
+            <p:column headerText="Task" >
+                <p:cellEditor>
+                    <f:facet name="output">
+                        <h:outputText value="#{task}" />
+                    </f:facet>
+                </p:cellEditor>
+            </p:column>
+        </p:dataTable>
+        </div>
     </h:form>
 
 </h:body>
